# kpubdata

./: .gitignore  AGENTS.md  API_SPEC.md  ARCHITECTURE.md  CANONICAL_MODEL.md  CHANGELOG.md  CONTRIBUTING.md  PACKAGING.md  PRD.md  PROVIDER_ADAPTER_CONTRACT.md  README.md  ROADMAP.md  SUPPORTED_DATA.md  VALIDATION.md  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs.yml  feature_request.yml  new-provider-adapter.yml
.github/workflows/: ci.yml  docs.yml  integration.yml  publish-pypi.yml
.sisyphus/: remove-get-record-plan.md
docs/: api-spec.md  architecture-diagrams.md  caching.md  canonical-model.md  cli.md  compatibility.md  contributing.md  datago-api-reference.md  glossary.md  index.md  logging.md  packaging.md  product-family-architecture.md  provider-adapter-contract.md  quickstart.md  supported-data.md  tutorial-ai-agent-workflow.md  validation.md
docs/_hooks/: rewrite_links.py
docs/adrs/: 0001-dialect-inspired-architecture.md  0002-standardize-ux-not-native-shape.md  index.md
docs/cookbook/: discovery.md  getting-started.md  raw-access.md
examples/: pandas_export.py  quickstart.py  raw_call.py  search_datasets.py
plans/: issue-179-building-registry.md  issue-180-law-provider.md  issue-229-bok-money-supply.md  issue-92-datago-dur-usjnt-taboo.md  issue-92-dur-age-taboo.md  issue-92-dur-dosage-caution.md  issue-92-dur-efficacy-duplication.md  issue-92-dur-er-tablet-split-caution.md  issue-92-dur-medication-period-caution.md  issue-92-dur-older-adult-caution.md  issue-92-dur-pregnancy-taboo.md  issue-92-dur-product-info.md  sgis-provider-issue-150.md
tests/: __init__.py
(+439 files in other folders)
