[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "kpubdata"
version = "0.1.0a0"
description = "Dialect-inspired Python access framework for Korean public data"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Your Name" }
]
keywords = [
  "korea",
  "public-data",
  "openapi",
  "sdk",
  "framework",
  "data-access",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Typing :: Typed",
]
dependencies = [
  "httpx>=0.27,<1",
  "typing-extensions>=4.10; python_version < '3.11'",
]

[project.optional-dependencies]
xml = [
  "xmltodict>=0.13,<1",
]
pandas = [
  "pandas>=2.2,<3",
]
validation = [
  "pydantic>=2.7,<3",
]
mcp = [
  "mcp>=1,<2",
]
dev = [
  "build>=1.2,<2",
  "mypy>=1.10,<2",
  "pytest>=8.2,<9",
  "pytest-cov>=5,<6",
  "ruff>=0.5,<1",
  "xmltodict>=0.13,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/kpubdata"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
mypy_path = ["src"]

[tool.pytest.ini_options]
addopts = "-ra -m 'not integration'"
markers = ["integration: real API integration tests (require API keys)"]
testpaths = ["tests"]
